--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,365 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap');
+
+:root {
+  --primaryLightColor: white;
+  --primaryColor: #476a2e;
+  --mainWhite: #f0f0f0;
+  --mainBlue: #2874f0;
+  --mainBackground: #white;
+  --mainBlack: #222;
+  --darkGrey: #5f5656;
+  --mainTransition: all 0.3s linear;
+  --mainSpacing: 0.3rem;
+  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+  --mainBorderRadius: 0.25rem;
+  --smallWidth: 85vw;
+  --maxWidth: 40rem;
+  --fullWidth: 1170px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: var(--mainBlack);
+}
+img {
+  width: 100%;
+  display: block;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'KoHo', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4;
+  background: var(--mainBackground);
+  color: var(--mainBlack);
+}
+
+/**Navbar**/
+.navbar{
+  background: var(--mainBlue);
+  display: flex;
+  height: 5rem;
+  align-items: center;
+  border-bottom: 2px solid var(--primaryColor);
+  box-shadow: var(--lightShadow);
+}
+.nav-center{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: var(--fullWidth);
+}
+.nav-links{
+  display: flex;
+  align-items: center;
+}
+.nav-links a{
+  text-transform: capitalize;
+  display: inline-block;
+  font-weight:bold;
+  margin-right: 0.5rem;
+  letter-spacing: 2px;
+  font-size: 1.8rem;
+  padding: 0.3rem 0.9rem;
+  transition: var(--mainTransition);
+}
+.nav-links a:hover{
+  color: var(--primaryColor);
+}
+/**logo**/
+.logo {
+  width: 12rem;
+}
+
+/**Homepage**/
+.homePageContainer-center{
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: var(--fullWidth);
+  display: grid;
+  row-gap: 2rem;
+  column-gap: 2rem;
+  overflow: hidden;
+  padding: 2rem
+}
+@media screen and (min-width:576px){
+  .homePageContainer-center{
+    grid-template-columns: repeat(auto-fill, minmax(338.8px, 1fr));
+  }
+  
+}
+.homePageContainer {
+  background: var(--mainWhite);
+  margin-bottom: 2rem;
+  box-shadow: var(--lightShadow);
+  transition: var(--mainTransition);
+  display: grid;
+  grid-template-rows: auto 1fr;
+  border-radius: var(--mainBorderRadius);
+  width: 90%;
+}
+.homePageContainer:hover {
+  box-shadow: var(--darkShadow);
+}
+img {
+  /* width: 80%; */
+  width: 100%;
+  display: block;
+  height: 50%;
+  overflow: hidden;
+ 
+}
+.homePageContainer img {
+  height: 30rem;
+  object-fit: cover;
+  overflow:hidden;
+  border-top-left-radius: var(--mainBorderRadius);
+  border-top-right-radius: var(--mainBorderRadius);
+}
+.homePageContainer-footer {
+  padding: 1.5rem;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+.homePageContainer-footer h1,
+.homePageContainer-footer h2,
+.homePageContainer-footer p {
+  margin-bottom: 0.3rem;
+}
+.homePageContainer-footer h1 {
+  font-size: 2rem;
+}
+.homePageContainer-footer p {
+  color: var(--darkGrey);
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+
+/**Header**/
+header{
+  display: flex;
+  justify-content: space-between;
+  font-size: 2rem;
+  font-weight: bold;
+  border-style:ridge;
+
+}
+header input{
+  font-size: 1rem;
+  font-weight: bold;
+}
+/**Section**/
+
+section{
+  display: flex;
+  justify-content: center;
+  text-justify: auto;
+  /* justify-content: space-evenly; */
+}
+/**Option**/
+.option{
+  padding: 1rem 1.5rem;
+  margin-left: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+/**Filter and Sort option**/
+select{
+  border-radius: 0.5rem;
+  padding: 0 0.5rem;
+}
+/** Search**/
+.search{
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.search-form{
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: 12.5rem;
+  background: var(--mainWhite);
+  padding: 0.5rem 0.5rem;
+  text-transform: capitalize;
+  border-radius: 0.5rem;
+  box-shadow: var(--lightShadow);
+}
+
+/**Button**/
+.btn,
+.btn-white,
+.btn-primary{
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  color: var(--primaryColor);
+  border: 2px solid var(--primaryColor);
+  padding: 0.45rem 0.8rem;
+  display: block;
+  transition: var(--mainTransition);
+  cursor: pointer;
+  font-size: 0.8rem;
+  background-color: transparent;
+  border-radius: var(--mainBorderRadius);
+  display: block;
+  
+}
+.btn:hover{
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+}
+.btn-white{
+  background: transparent;
+  color: var(--mainWhite);
+  border-color: var(--mainWhite);
+}
+.btn-white:hover{
+  background: var(--mainWhite);
+  color: var(--primaryColor);
+}
+.btn-primary{
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+  border-color: transparent;
+}
+.btn-primary:hover{
+  background:var(--primaryLightColor);
+  color: var(--primaryColor);
+}
+.btn-block {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  box-shadow: var(--lightShadow);
+  text-align: center;
+}
+.btn-details {
+  padding: 0.25rem 0.4rem;
+}
+.btn-details:hover {
+  background: var(--primaryLightColor);
+  border-color: var(--primaryLightColor);
+}
+
+/**Cartpage**/
+.cartPageContainer-center{
+  width: var(--smallWidth);
+  margin: 0 auto;
+  max-width: var(--fullWidth);
+  display: grid;
+  row-gap: 2rem;
+  column-gap: 2rem;
+  overflow: hidden;
+  padding: 2rem
+}
+@media screen and (min-width:576px){
+  .cartPageContainer-center{
+    grid-template-columns: repeat(auto-fill, minmax(338.8px, 1fr));
+  }
+  
+}
+.cartPageContainer {
+  background: var(--mainWhite);
+  margin-bottom: 0.5rem;
+  box-shadow: var(--lightShadow);
+  transition: var(--mainTransition);
+  display:list-item;
+  /* grid-template-rows: auto 1fr; */
+  border-radius: var(--mainBorderRadius);
+  width: 60%;
+}
+.cartPageContainer:hover {
+  box-shadow: var(--darkShadow);
+}
+.cartPageContainer .img {
+  /* width: 80%; */
+  width: 20%;
+  display: block;
+  height: 10%;
+  overflow: hidden;
+ 
+}
+.cartPageContainer img {
+  height: 5%;
+  object-fit: cover;
+  overflow:hidden;
+  border-top-left-radius: var(--mainBorderRadius);
+  border-top-right-radius: var(--mainBorderRadius);
+}
+.cartPageContainer-footer {
+  padding: .5rem;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+.cartPageContainer-footer h1,
+.cartPageContainer-footer h2,
+.cartPageContainer-footer p {
+  margin-bottom: 0.3rem;
+}
+.cartPageContainer-footer h1 {
+  font-size: 2rem;
+}
+.cartPageContainer-footer p {
+  color: var(--darkGrey);
+  font-size: 1.1rem;
+  font-weight: 200;
+  margin-bottom: 0.5rem;
+}
+
+aside{
+  display: flex;
+  justify-content: center;
+}
+
+nav{
+  border-width: 5rem;
+  padding: 2rem;
+  height: fit-content;
+  border-radius: 0;
+  box-sizing: content-box;
+  background-color: #2874f0;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav .end{
+  display: flex;
+  justify-content: flex-end;
+}
+.button{
+  padding: 2rem;
+  font-size: larger;
+  color: #f0f0f0;
+}
+
+.logo{
+  /* padding: -1rem; */
+  width: 9%;
+  height: 10%;
+  display:flex;
+  justify-content: flex-start;
+}
+
+.button1{
+  align-items: center;
+  margin: auto;
+  align-content: center;
+  padding-left: 40%;
 }
